# MXVK

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile.sh  debug.pl  install.pl  install.sh  mxmod2obj_all.pl  run.pl  testapps.pl  testapps.sh  testcvapps.sh
MXNetwork/: CMakeLists.txt  README.md
MXNetwork/cmake/: mxnetworkConfig.cmake.in
MXNetwork/examples/client/: CMakeLists.txt  client.cpp
MXNetwork/examples/download/: CMakeLists.txt  dl-file.cpp
MXNetwork/examples/fileserve/: CMakeLists.txt  fileserve.cpp
MXNetwork/examples/relay/: CMakeLists.txt  relay.cpp
MXNetwork/examples/relay-client/: CMakeLists.txt  main.cpp  relaywindow.cpp  relaywindow.hpp
MXNetwork/examples/server/: CMakeLists.txt  server.cpp
MXNetwork/examples/udp-recv/: CMakeLists.txt  recv.cpp
MXNetwork/examples/udp-send/: CMakeLists.txt  send.cpp
MXNetwork/examples/unix-udp-recv/: CMakeLists.txt  recv.cpp
MXNetwork/examples/unix-udp-send/: CMakeLists.txt  send.cpp
MXNetwork/include/mxnetwork/: exception.hpp  mxsocket.h  mxsocket.hpp  socket.hpp
MXNetwork/src/: exception.cpp  mxsocket.c  mxsocket.cpp  socket.cpp
examples/3dmath_masterpiece/: CMakeLists.txt  README.md  main.cpp
examples/3dmath_obj_loader/: CMakeLists.txt  benchmark_graph.py  benchmark_graph_scale2.py
examples/3dmath_plg_loader/: CMakeLists.txt  README.md  benchmark_graph.py  main.cpp
examples/3dmath_plg_loader/data/: sphere.plg
examples/3dmath_pyramid/: CMakeLists.txt  README.md  main.cpp
examples/3dmath_pyramid/data/: pyramid.plg
examples/3dmath_texture_array/: CMakeLists.txt  README.md  main.cpp
examples/asteroids/: CMakeLists.txt  README.md  space.cpp
examples/asteroids-net/: CMakeLists.txt  README.md  asteroids-net.desktop  asteroids-net.in  asteroids3d_types.hpp  asteroids3d_window.cpp  asteroids3d_window.hpp  main.cpp  multiplayer.cpp  multiplayer.hpp  port_mapping.cpp  port_mapping.hpp  ship.cpp  ship.hpp  starfield.hpp
examples/asteroids-net/data/: asteroid.mtl  starship.tex
examples/asteroids-net/shaders/: fade_overlay.frag  flame.frag
examples/asteroids3d/: CMakeLists.txt  README.md  asteroids3d.desktop  asteroids3d.in  asteroids3d_types.hpp  asteroids3d_window.cpp  asteroids3d_window.hpp  main.cpp  starfield.cpp  starfield.hpp
examples/asteroids3d/data/: rock.tex  rock2.tex  star.tex
examples/asteroids3d/shaders/: fade_overlay.frag  flame.frag  intro.frag  model.frag  model.vert
examples/binary_matrix/: CMakeLists.txt  README.md  binary_matrix.cpp
examples/binary_matrix/data/: background.frag
examples/bluesky/: CMakeLists.txt  README.md  bluesky.cpp
examples/bluesky/shaders/: sky.frag  sky.vert  water.frag  water.vert
examples/breakout/: CMakeLists.txt  README.md  breakout.cpp
examples/breakout/data/: background.frag  breakout_manifest.txt  intro_manifest.txt  model.frag  model.vert  texture0_manifest.txt  texture1_manifest.txt  texture3_manifest.txt
examples/compute_shader/: CMakeLists.txt  README.md  index.txt  main.cpp
examples/compute_shader/data/: acidcam_filters.comp
examples/console_demo/: CMakeLists.txt  README.md  main.cpp
examples/console_demo/data/: background_pulse.frag  sprite.vert
examples/dark/: CMakeLists.txt  README.md  dark.cpp  dark.html
examples/dark/data/: crystal.txt
examples/dark/shaders/: beam.frag  beam3d.frag  beam3d.vert  dark.frag  dark.vert
examples/defender/: CMakeLists.txt  README.md  defender.cpp  defender_assets.cpp  defender_assets.hpp  defender_combat.cpp  defender_console.cpp  defender_enemies.cpp  defender_entities.hpp  defender_flame.cpp  defender_intro.cpp  defender_types.hpp  defender_window.cpp  defender_window.hpp
examples/fire/: CMakeLists.txt  README.md  fire.cpp
examples/fire/shaders/: fire.frag
examples/fireworks/: CMakeLists.txt  README.md  fireworks.cpp
examples/fireworks/shaders/: fireworks.frag  fireworks.vert
examples/fractal_zoom/: CMakeLists.txt  README.md  fractal.cpp
examples/fractal_zoom/shaders/: fractal.frag  fractal.vert  fractal_float.frag
examples/glitch_cube/: CMakeLists.txt  README.md  glitch.cpp
examples/glitch_cube/shaders/: background.frag  model.frag  model.vert
examples/hello_world/: CMakeLists.txt  README.md  main.cpp
examples/hello_world/shaders/: triangle.vert  triangle.vert.spv
examples/knight/: CMakeLists.txt  knight.cpp
examples/knight/shaders/: color_key.frag
examples/masterpiece/: CMakeLists.txt  README.md  main.cpp
examples/matrix/: CMakeLists.txt  README.md  matrix.cpp
examples/model_example/: CMakeLists.txt  README.md  main.cpp
examples/model_example/data/: bowl.frag.spv  draw.txt  lostcrystal.frag.spv  moon.txt  ripple.frag.spv  texture2.txt  texture_manifest.txt
examples/model_example/shaders/: bowl.frag  lostcrystal.frag  model.frag  model.vert  ripple.frag
examples/moon/: CMakeLists.txt  README.md  moon.cpp
examples/moon/data/: moon.mtl  pyramid.mtl
examples/moon/shaders/: moon.frag
examples/mutatris/: CMakeLists.txt  README.md  common.hpp  game_grid.cpp  game_grid.hpp  mutatris.cpp  mutatris.desktop  mutatris.in  mutatris_window.cpp  mutatris_window.hpp  piece.cpp  piece.hpp  puzzle_game.cpp  puzzle_game.hpp
examples/mutatris/shaders/: background.frag  crt.frag  fade.frag
examples/mutatris/shaders/effects/: aurora_vortex.glsl  chrome_spiderweb.glsl  code-frac-aurora-vault.glsl  code-frac-bass-singularity.glsl  code-frac-chromatic-rift.glsl  code-frac-cosmic-iris.glsl  code-frac-crystal-tunnel.glsl  code-frac-diamond-echo.glsl  code-frac-electric-reef.glsl  code-frac-fracture-garden.glsl  code-frac-glitch-cathedral.glsl  code-frac-infinite-stair.glsl  code-frac-laser-orchid.glsl  code-frac-liquid-mirror.glsl  code-frac-mandala-pulse.glsl  code-frac-neon-petals.glsl  code-frac-ocean-kaleido.glsl  code-frac-plasma-orbit.glsl  code-frac-prism-wormhole.glsl  code-frac-quartz-ripples.glsl  code-frac-ruby-hyperspace.glsl  (+57 more)
examples/opencv_example/: CMakeLists.txt  README.md  main.cpp
examples/opencv_example/data/: text_vert.spv
examples/opencv_example/shaders/: fragment.frag
volk/: CMakeLists.txt  volk.cpp
(+288 files in other folders)
